# Code

./: readme.txt
camera-imu-calibrate/: .gitignore  .gitmodules  CMakeLists.txt  README.md
camera-imu-calibrate/include/: IccCalibrator.hpp  IccPlots.hpp  IccSensors.hpp  IccUtils.hpp  format_utils.hpp  math_utils.hpp  rapidcsv.hpp
camera-imu-calibrate/include/kalibr_backend/: TransformationDesignVariable.hpp
camera-imu-calibrate/include/kalibr_common/: ConfigReader.hpp  ImageDatasetReader.hpp  ImuDatasetReader.hpp  TargetExtractor.hpp
camera-imu-calibrate/include/kalibr_errorterms/: AccelerometerError.hpp  EuclideanError.hpp  GyroscopeError.hpp
camera-imu-calibrate/include/sm/plot/: PlotCollection.hpp  plotCoordinateFrame.hpp
camera-imu-calibrate/include/sm/progress/: Progress.hpp
camera-imu-calibrate/script/: extract_from_ros1_bag.py
camera-imu-calibrate/src/: AccelerometerError.cpp  ConfigReader.cpp  EuclideanError.cpp  GyroscopeError.cpp  IccCalibrator.cpp  IccPlots.cpp  IccSensors.cpp  IccUtils.cpp  ImageDatasetReader.cpp  ImuDatasetReader.cpp  TargetExtractor.cpp  TransformationDesignVariable.cpp  main.cpp
camera-imu-calibrate/tests/: CMakeLists.txt
mututil_lidar_manual_calib/manual_icp/: CMakeLists.txt  manual_icp.cpp
mututil_lidar_manual_calib/self_icp/: ICP.py  ros2_listen_lidar.py  self_icp.py  self_icp_sucess.py
simple_sensor_calibration_toolbox/: README.md
simple_sensor_calibration_toolbox/doc/: calibration_file_format.md
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/: CMakeLists.txt  README.md  package.xml
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/config/: calibrator.yaml
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/include/ssct_camera_intrinsic_calib/: calibration_node.hpp  pinhole_calibrator.hpp
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/launch/: demo.launch.py
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/scripts/: calibration_client.py
simple_sensor_calibration_toolbox/ssct_camera_intrinsic_calib/src/: calibration_main.cpp  calibration_node.cpp  pinhole_calibrator.cpp
simple_sensor_calibration_toolbox/ssct_common/: CMakeLists.txt  package.xml
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/: calib_param_manager.hpp  msg_utils.hpp  tic_toc.hpp
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/calib_param/: camera_intrinsic_param.hpp  extrinsic_param.hpp  imu_intrinsic_param.hpp
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/dummy_sensor/: dummy_camera_node.hpp  dummy_imu_node.hpp  dummy_lidar_node.hpp
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/publisher/: cloud_publisher.hpp  image_publisher.hpp  imu_publisher.hpp
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/sensor_data/: image_data.hpp  imu_data.hpp
simple_sensor_calibration_toolbox/ssct_common/include/ssct_common/subscriber/: cloud_subscriber.hpp  image_subscriber.hpp  imu_subscriber.hpp
simple_sensor_calibration_toolbox/ssct_common/launch/: dummy_sensors.launch.py
simple_sensor_calibration_toolbox/ssct_common/scripts/: calibration_client.py
simple_sensor_calibration_toolbox/ssct_common/src/: calib_param_manager.cpp  msg_utils.cpp  tic_toc.cpp
simple_sensor_calibration_toolbox/ssct_common/src/dummy_sensor/: dummy_camera_main.cpp  dummy_camera_node.cpp  dummy_imu_main.cpp  dummy_imu_node.cpp  dummy_lidar_main.cpp  dummy_lidar_node.cpp
simple_sensor_calibration_toolbox/ssct_common/src/publisher/: cloud_publisher.cpp  image_publisher.cpp  imu_publisher.cpp
simple_sensor_calibration_toolbox/ssct_common/src/subscriber/: image_subscriber.cpp  imu_subscriber.cpp
simple_sensor_calibration_toolbox/ssct_interface/: CMakeLists.txt  package.xml
simple_sensor_calibration_toolbox/ssct_interface/msg/: CalibrationCommand.msg  CalibrationStatus.msg  CameraIntrinsicParam.msg  ExtrinsicParam.msg
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/: CMakeLists.txt  README.md  package.xml
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/config/: calibrator.yaml  initial_calibration.yaml
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/include/ssct_lidar_cam_manual_calib/: calibration_node.hpp  lidar_projector.hpp
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/launch/: demo.launch.py
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/scripts/: calibration_client.py
simple_sensor_calibration_toolbox/ssct_lidar_cam_manual_calib/src/: calibration_main.cpp  calibration_node.cpp  lidar_projector.cpp
